/*
 * $Id: ChangeLog,v 1.3593 2004/11/10 15:23:42 paultucker Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-11-11 11:46 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/pp/pptable.c
    * Added rule to support empty literal hash, to complement recent fix to #translate rule of Hash support.

2004-11-10 10:20 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makefile.bc
  * makefile.vc
  * makefile.wc
  * makefile.nt
  * hrbdll.bc
  * hrbdll.vc
  * hrbdll.wc
    + source/rtl/sprintf.prg
    + source/rtl/stream.prg

2004-11-10 15:40 UTC+0100 Lorenzo Fiorini <lorenzo_fiorini/at/teamwork.it>
  * source/rtl/Makefile
    * added hbmd5.c

2004-11-09 13:58 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/dbedit.prg
    ! K_ESC "default" behaivor must not be executed if user's function
      defined.

2004-11-08 10:57 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/rtl/browse.prg
  * source/rtl/tgetlist.prg
    * Reverted changed of Inkey() to Inkey(0.1) - Module developers should review correct fix.

2004-11-07 13:50 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/filesys.c
    * change to allow HandleToLong to work when SDK not installed.

2004-11-07 15:09 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/set.c
    * Moved Unix default printer device to hb_set_SetDefaultPrinter().
    * Changed "s_HaveSetPrinterName" to "s_isDefaultPrinterDevice"
    * Minor formatting.
    * Modified the PRINTER open/close system. Centralized to be
      accesible "anywhere", respecting an output to file or the
      "real" printer, and verifying not interrupt an active
      SET PRINTER ON / SET DEVICE TO PRINTER.
      Reported by Jose Arias Vega.
  * source/rtl/console.c
    ! EJECT now can work if printer device is not already initialized.
