@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3593 2004/11/10 15:23:42 paultucker Exp $
+ * $Id: ChangeLog,v 1.3594 2004/11/11 19:49:38 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-11-13 05:26 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
+  * xharbour/source/rdd/dbffpt/dbffpt1.c
+    ! fixed bug in GPT GC. Thanks to Henryk for code sample.
 
 2004-11-11 11:46 UTC-0800 Ron Pinkas <ron at xharbour.com>
   * source/pp/pptable.c
